--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ OUTPUT*.json
 OUTPUT*.TXT
 
 #RestApi
-restApi/files/
+restApi/files/*
+!restApi/files/test_corrupted
 restApi/virus_total_api_key
 
 # Created by https://www.gitignore.io/api/python,pycharm
